--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -145,6 +145,9 @@ jobs:
   examples-run:
     needs:
       - examples-matrix
+      # run examples after integ - they will both try to modify say syslog_server etc
+      - integ
+    if: "always() && (needs.examples-matrix.outputs.job_status=='success')"
     runs-on: [ self-hosted2 ]
     container: quay.io/justinc1_github/scale_ci_integ:3
     env:
