Make VM shutdown wait time a configurable parameter
Testing will be easier.
Also users might need to wait longer than 300 sec.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/roles/version_update_single_node/meta/argument_specs.yml
+++ b/roles/version_update_single_node/meta/argument_specs.yml
@@ -13,3 +13,9 @@ argument_specs:
           - If multi-node system was detected, no update will be applied.
         required: true
         type: str
+      scale_computing_hypercore_shutdown_wait_time:
+        description:
+          - How much time (in seconds) VMs have to gracefully shutdown.
+          - After wait time expires a force shutdown is issued. Force shutdown can corrupt VM disk data.
+        default: 300
+        type: int
