--- a/tests/integration/targets/version_update__shutdown_restart_vms/tasks/main.yml
+++ b/tests/integration/targets/version_update__shutdown_restart_vms/tasks/main.yml
@@ -22,6 +22,7 @@
       - "{{ vm_name_a }}"
       - "{{ vm_name_b }}"
       - "{{ vm_name_c }}"
+    scale_computing_hypercore_shutdown_wait_time: 30
 
   block:
     - name: Check vm_shutdown_restart_allow_string value
