--- a/roles/version_update_single_node/tasks/restart_vms.yml
+++ b/roles/version_update_single_node/tasks/restart_vms.yml
@@ -4,7 +4,7 @@
     vm_name: "{{ item.vm_name }}"
     power_state: start
   when: item.power_state == 'started'
-  loop: "{{ vms.records }}"
+  loop: "{{ scale_computing_hypercore_restart_vms.records }}"
   register: vm_start_result
 
 - name: Show restart results
