--- a/roles/version_update_single_node/tasks/wait_vm_shutdown.yml
+++ b/roles/version_update_single_node/tasks/wait_vm_shutdown.yml
@@ -25,15 +25,19 @@
     #    CRASHED="crashed",
     # Do not include 'shutdown' - it means "shutting_down"
     # States paused, blocked  - might be safe to include, might not. Do not include yet.
-    - name: Set fact version_update_all_vms_stopped
+    - name: Set fact version_update_all_vms_stopped to initial true
       ansible.builtin.set_fact:
-        version_update_all_vms_stopped: |
-          {{
-            (
-              version_update_vms.records | map(attribute='power_state') | unique) |
-              ansible.builtin.difference(['stopped', 'crashed']
-            ) == []
-          }}
+        version_update_all_vms_stopped: true
+
+    # We wait for VMs to shutdown, but only if they are included in the scale_computing_hypercore_shutdown_vms list.
+    - name: Reset version_update_all_vms_stopped if any VM is still running
+      ansible.builtin.set_fact:
+        version_update_all_vms_stopped: false
+      when:
+        - (version_update_vms.records | selectattr("vm_name", "equalto", item.vm_name) | list).0.power_state not in ['stopped', 'crashed']
+        - (scale_computing_hypercore_shutdown_tags == []) or (scale_computing_hypercore_shutdown_tags | intersect(item.tags))
+      loop: "{{ scale_computing_hypercore_shutdown_vms.records }}"
+      register: vm_shutdown_result
 
     - name: Are all VMs stopped?
       ansible.builtin.debug:
