vm_snapshot integration tests

--- a/tests/integration/targets/vm_snapshot/tasks/main.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/main.yml
@@ -15,6 +15,7 @@
     - include_tasks: 01_vm_snapshot_info.yml
       vars:
         test_vms_number: "{{ number_of_snapshot_testing_vms }}"
+    - include_tasks: 02_vm_snapshot.yml
   always:
     - include_tasks: helper_api_vm_snapshot_delete_all.yml
       vars:
