--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -218,12 +218,18 @@ jobs:
             test_name: vm_replication_info
           - sc_host: https://10.5.11.50
             test_name: support_tunnel
+          - sc_host: https://10.5.11.50
+            test_name: vm_clone__replicated
         exclude:
           # The VSNS were not configured with remote replication cluster.
           - sc_host: https://10.5.11.200
             test_name: vm_replication
           - sc_host: https://10.5.11.201
             test_name: vm_replication
+          - sc_host: https://10.5.11.200
+            test_name: vm_clone__replicated
+          - sc_host: https://10.5.11.201
+            test_name: vm_clone__replicated
           # Seem as VSNS nodes cannot open remote tunnel.
           # Code/port that worked (was opened, then closed) on real HyperCode
           # did not work with VSNS.
