Adding: - integration tests to clone - doc fragment to changelogs

--- a/tests/integration/targets/vm_clone/tasks/01_cleanup.yml
+++ b/tests/integration/targets/vm_clone/tasks/01_cleanup.yml
@@ -37,3 +37,6 @@
     - XLAB-vm_clone_CI-test-cloud_init-clone
     - XLAB-vm_clone-while-running-test-clone
     - XLAB-vm_clone_CI-test-preserve-mac-clone
+    - XLAB-vm_clone_CI-test-clone-from-snapshot
+    - XLAB-vm_clone_CI-test-clone-from-snapshot-clone
+    - XLAB-vm_clone_CI-test-clone-from-snapshot-clone-2
