--- a/tests/integration/targets/vm_clone/tasks/02_prepare_source_vms.yml
+++ b/tests/integration/targets/vm_clone/tasks/02_prepare_source_vms.yml
@@ -103,3 +103,41 @@
     that:
       - source_running_info.records | length == 1
       - source_running_info.records.0.power_state == "started"
+
+- name: Create XLAB-vm_clone_CI-test-clone-from-snapshot
+  scale_computing.hypercore.api:
+    action: post
+    endpoint: /rest/v1/VirDomain
+    data:
+      dom:
+        name: XLAB-vm_clone_CI-test-clone-from-snapshot
+        tags: Xlab,CI,test,vm_clone
+        mem: 511705088
+        numVCPU: 2
+        blockDevs:
+          - type: VIRTIO_DISK
+            capacity: 8100100100
+            name: jc1-disk-0
+        netDevs:
+          - type: RTL8139
+            vlan: 0
+            connected: true
+      options:
+        attachGuestToolsISO: False
+  register: vm_created
+- ansible.builtin.assert:
+    that:
+      - vm_created is succeeded
+      - vm_created is changed
+
+- name: Wait for the VM to be created
+  scale_computing.hypercore.task_wait:
+    task_tag: "{{ vm_created.record }}"
+
+- name: Retrieve XLAB-vm_clone_CI-test-clone-from-snapshot
+  scale_computing.hypercore.vm_info:
+    vm_name: XLAB-vm_clone_CI-test-clone-from-snapshot
+  register: source_snapshot_info
+- ansible.builtin.assert:
+    that:
+      - source_snapshot_info.records | length == 1
