--- a/changelogs/fragments/vm_snapshot_modules.yml
+++ b/changelogs/fragments/vm_snapshot_modules.yml
@@ -1,4 +1,6 @@
 ---
 major_changes:
-  - Added vm_snapshot and vm_snapshot_info modules.
+  - Added vm_snapshot_info module.
     (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/166)
+  - Added vm_snapshot module.
+    (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/217)
