--- a/examples/vm_snapshot_removal_based_on_timestamp.yml
+++ b/examples/vm_snapshot_removal_based_on_timestamp.yml
@@ -18,7 +18,7 @@
       scale_computing.hypercore.vm_snapshot_info:
       register: snapshot_results
 
-    - name: Convert date to unix timestamp "epoch"
+    - name: Convert date to unix timestamp 'epoch'
       set_fact:
         epoch_timestamp: "{{ (use_date | to_datetime).strftime('%s') }}"
 
@@ -30,21 +30,21 @@
       set_fact:
         filtered_snapshots: []
 
-    - name: Loop through snapshots and add snapshots that are older than "use_date"
+    - name: Loop through snapshots and add snapshots that are older than 'use_date'
       set_fact:
         filtered_snapshots: "{{ filtered_snapshots + [ item ] }}"
       when: "{{ item.timestamp  > epoch_timestamp | int }}"
       loop: "{{ snapshot_results.records }}"
       no_log: true
 
-    - name: Show only snapshots that are older than "use_date"
+    - name: Show only snapshots that are older than 'use_date'
       ansible.builtin.debug:
         var: filtered_snapshots
 
     # We could reuse "filtered_snapshots" here instead of "snapshot_results" and avoid the "when" statement.
     # But leaving it as is for example purposes.
     # Since this is the only mandatory task of the playbook, can be copy-pasted and reused as standalone task.
-    - name: Loop through list of snapshots and delete all older than the "use_date"
+    - name: Loop through list of snapshots and delete all older than the 'use_date'
       scale_computing.hypercore.vm_snapshot:
         vm_name: "{{ item.vm.name }}"
         label: "{{ item.label }}"
@@ -56,13 +56,13 @@
       set_fact:
         filtered_snapshots: []
 
-    - name: Loop through snapshots and add snapshots that are older than "use_date" - second time
+    - name: Loop through snapshots and add snapshots that are older than 'use_date' - second time
       set_fact:
         filtered_snapshots: "{{ filtered_snapshots + [ item ] }}"
       when: "{{ item.timestamp  > epoch_timestamp | int }}"
       loop: "{{ snapshot_results.records }}"
       no_log: true
 
-    - name: Show only snapshots that are older than "use_date" - second time
+    - name: Show only snapshots that are older than 'use_date' - second time
       ansible.builtin.debug:
         var: filtered_snapshots
