Add integration tests for module vm_snapshot_attach_disk.
Update integration tests.

Fix for sanity.

Update integration tests.

Change some variables in integration tests.

--- a/tests/integration/targets/vm_snapshot/tasks/helper_api_vm_snapshot_create.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/helper_api_vm_snapshot_create.yml
@@ -1,4 +1,7 @@
 ---
+# ++++++++++++++++++++++++++++++
+# First two VMs will have snapshots, the rest will not!
+# ++++++++++++++++++++++++++++++
 - name: Create test VMs
   scale_computing.hypercore.vm:
     vm_name: "snapshot-test-vm-{{ item }}"
@@ -6,7 +9,7 @@
     state: present
     tags:
       - Xlab_snapshot_testing
-    memory: "{{ '512 MB' | human_to_bytes }}"
+    memory: "{{ '4 GB' | human_to_bytes }}"
     vcpu: 2
     attach_guest_tools_iso: false
     power_state: start
