Fix update_status_check.yml to work on clean cluster too
On clean cluster version_update_status_info returns update_status=None

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/roles/version_update_single_node/tasks/update_status_check.yml
+++ b/roles/version_update_single_node/tasks/update_status_check.yml
@@ -14,7 +14,12 @@
     - name: Check update status - will report FAILED-RETRYING until update COMPLETE/TERMINATED
       scale_computing.hypercore.version_update_status_info:
       register: update_status
-      until: update_status.record.update_status == "COMPLETE" | default(omit) or update_status.record.update_status == "TERMINATING" | default(omit)
+      until: >-
+        update_status.record != None and
+        (
+          update_status.record.update_status == "COMPLETE" or
+          update_status.record.update_status == "TERMINATING"
+        )
       retries: 100
       delay: 30
       ignore_unreachable: true
