Fix version_update_single_node to send shutdown request multiple times.

--- a/roles/version_update_single_node/tasks/main.yml
+++ b/roles/version_update_single_node/tasks/main.yml
@@ -57,6 +57,7 @@
       include_tasks: shutdown_vms.yml
       vars:
         scale_computing_hypercore_shutdown_vms: "{{ vm_info }}"
+      loop: "{{ range(0, (scale_computing_hypercore_shutdown_wait_time / 10.0) | round(0, 'ceil') | int) | list }}"
       when: vms.records != []
 
     # ----------------- UPDATE --------------------
