Update vm_snapshot_info and vm_snapshot_attach_disk documentations, update integration tests.
Another fix for sanity.

--- a/tests/integration/targets/vm_snapshot/tasks/01_vm_snapshot_info.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/01_vm_snapshot_info.yml
@@ -62,7 +62,7 @@
       scale_computing.hypercore.vm_snapshot_info:
       register: vm_snapshots
     - ansible.builtin.debug:
-        var: vm_snapshots.records
+        var: vm_snapshots.records[0]
     - ansible.builtin.assert: &assert-existing
         that:
           - vm_snapshots is not changed
@@ -70,6 +70,7 @@
           - vm_snapshots.records[0].keys() | sort ==
             ["automated_trigger_timestamp",
             "block_count_diff_from_serial_number",
+            "device_snapshots",
             "label",
             "local_retain_until_timestamp",
             "remote_retain_until_timestamp",
