--- a/tests/integration/targets/vm_snapshot/tasks/helper_api_vm_snapshot_create.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/helper_api_vm_snapshot_create.yml
@@ -12,7 +12,7 @@
     memory: "{{ '4 GB' | human_to_bytes }}"
     vcpu: 2
     attach_guest_tools_iso: false
-    power_state: start
+    power_state: stop
     disks:
       - type: virtio_disk
         disk_slot: 0
