--- a/tests/integration/targets/vm_snapshot/tasks/02_vm_snapshot_attach_disk.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/02_vm_snapshot_attach_disk.yml
@@ -1,17 +1,22 @@
 ---
+# ==============================
+# The VM to which we are trying to attach the snapshot disk to MUST NOT be running!
+# ==============================
 - name: Test vm_snapshot_attach_disk
 
   vars:
+    vm_1_snapshot_label_0: ana-snap
     vm_1_snapshot_label: snap-0
     vm_1: snapshot-test-vm-1 # test-snapshot_attach_disk-ana
     vm_2: snapshot-test-vm-3 # test-snapshot_attach_disk-ana-2
     slot_a: 42  # later set to 0
     slot_b: 43  # later set to 1
+    slot_c: -1  # I've seen this option for the slot in the documentation for endpoint "rest/v1/VirDomainBlockDevice/{uuid}/clone"
 
   block:
-#    - include_tasks: helper_api_vm_snapshot_create.yml
-#      vars:
-#        vms_number: "{{ test_vms_number }}"
+    - include_tasks: helper_api_vm_snapshot_create.yml
+      vars:
+        vms_number: "{{ test_vms_number }}"
 
     # --------------------------------------------------------
 
@@ -27,14 +32,14 @@
     - name: Get info of VM "{{ vm_1 }}"
       scale_computing.hypercore.vm_info:
         vm_name: "{{ vm_1 }}"
-      register: vm_exist_1_info
+      register: vm_1_info
 
     - name: Get info of VM "{{ vm_2 }}"
       scale_computing.hypercore.vm_info:
         vm_name: "{{ vm_2 }}"
       register: vm_2_info
 
-    # Test with existing snapshots and VMs
+    # ++++++++++++ Test attach snapshot disk from one VM to another +++++++++++
     # --------- Test VIRTIO_DISK to VIRTIO_DISK ---------
 
     - name: Attach "snap-0" from VM "{{ vm_1 }}" to VM "{{ vm_2 }}" - as VIRTIO_DISK
@@ -73,7 +78,7 @@
           - result is not changed
     - ansible.builtin.assert: *test-virtio
 
-    # --------- Test VIRTIO_DISK to SOME_OTHER_TYPE_OF_DISK ---------
+#    # --------- Test VIRTIO_DISK to SOME_OTHER_TYPE_OF_DISK ---------
     - name: Attach "snap-0" from VM "{{ vm_1 }}" to VM "{{ vm_2 }}" - as NOT VIRTIO_DISK
       scale_computing.hypercore.vm_snapshot_attach_disk:
         vm_name: "{{ vm_2 }}"
@@ -109,6 +114,44 @@
         that:
           - result is not changed
     - ansible.builtin.assert: *test-not-virtio
+
+    # ++++++++++++ Test attach snapshot disk from a VM to itself +++++++++++++
+
+    - name: Attach "snap-0" from VM "{{ vm_1 }}" to VM "{{ vm_1 }}" - as VIRTIO_DISK
+      scale_computing.hypercore.vm_snapshot_attach_disk:
+        vm_name: "{{ vm_1 }}"
+        vm_disk_type: virtio_disk
+        vm_disk_slot: "{{ slot_a }}"
+        source_snapshot_uuid: "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
+        source_disk_type: virtio_disk
+        source_disk_slot: 1
+      register: result
+    - ansible.builtin.debug:
+        var: result
+    - ansible.builtin.assert:
+        that:
+          - result is changed
+    - ansible.builtin.assert: &test-virtio-2
+        that:
+          - result.record.type == "VIRTIO_DISK"
+          - result.record.slot == slot_a
+          - result.record.vm_uuid == vm_1_info.records[0].uuid
+
+    - name: IDEMPOTENCE - Attach "snap-0" from VM "{{ vm_1 }}" to VM "{{ vm_1 }}" - as VIRTIO_DISK
+      scale_computing.hypercore.vm_snapshot_attach_disk:
+        vm_name: "{{ vm_1 }}"
+        vm_disk_type: virtio_disk
+        vm_disk_slot: "{{ slot_a }}"
+        source_snapshot_uuid: "{{ vm_1_snapshot_info.records[0].snapshot_uuid }}"
+        source_disk_type: virtio_disk
+        source_disk_slot: 1
+      register: result
+    - ansible.builtin.debug:
+        var: result
+    - ansible.builtin.assert:
+        that:
+          - result is not changed
+    - ansible.builtin.assert: *test-virtio-2
 
 # ---------------------------------------------------------------
 
