CI revert unneeded change
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/role_version_update_single_node/tasks/main.yml
+++ b/tests/integration/targets/role_version_update_single_node/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 - environment:
     SC_HOST: "{{ sc_host }}"
-    SC_USERNAME: "{{ sc_username_50 }}"
-    SC_PASSWORD: "{{ sc_password_50 }}"
+    SC_USERNAME: "{{ sc_config[sc_host].sc_username }}"
+    SC_PASSWORD: "{{ sc_config[sc_host].sc_password }}"
     SC_TIMEOUT: "{{ sc_timeout }}"
 
   vars:
