Exclude mypy.requirements from collection tarball
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -27,6 +27,7 @@ build_ignore:
   - docs.requirements
   - sanity.requirements
   - test.requirements
+  - mypy.requirements
   - Makefile
   # files used during local testing/building
   - ansible.cfg
