--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,7 +1,7 @@
 ---
 namespace: scale_computing
 name: hypercore
-version: 1.2.0
+version: 1.3.0-dev0
 readme: README.md
 authors:
   - XLAB Steampunk <steampunk@xlab.si>
